--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "globals": "^16.3.0",
     "vite": "^7.1.2"
   },
-  "homepage": "https://sanjeevh1.github.io/sas_core_planner/sas-core-planner/"
+  "homepage": "https://sanjeevh1.github.io/sas-core-planner/"
 }
